# A21-SoftwareDesign

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  INSTALL.sh  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: CPPCompile.yml  CodeQL.yml  DB-CI.yml  DB-Format.yml  codeql-analysis.yml  pr-cpp-format.yml
DataBase/: 233.txt  APIAccess.h  APIHandler.h  APIRouter.h  APIServer.h  Contact.h  ContactNOGroup.h  ContactWithGroup.h  DATABASE_INCLUDE.h  DB_Export.cpp  DB_Export.h  DB_Import.h  DB_Main.cpp  DbExport.cpp  DbExport.h  ECDB.csv  ECDB_EM.csv  EM_Import.h  EmailReader.h  FileIO.h  InputFile.h  Merge.h  Priority  Priority.h  README.md  TierDB.h  Weight.h  a.out  apidemo.cpp  apitest.sh  contact.h  main.cpp  newMail.txt  run  tree.h
TreeDB/: contact.h  main.c
Web/: README.md  index.html  main.css  main.html  main_page.css  main_page.html  main_page.js  package-lock.json  package.json  server.js  test.html
Web/backup/: main.html
Web/sublink/: account.css  account.html  account.js
